# reverse-polish-calculator

./: README.md  dune-project  reverse-polish-calculator.cabal
app/: Lexer.hs  Main.hs
backup/: gleam.toml
backup/src/: calc.gleam  lexer.gleam  reverse_polish_calculator.gleam
backup/test/: calc_test.gleam  lexer_test.gleam
backup2/: reverse-polish-calculator.cabal
backup2/app/: Eval.hs  Lexer.hs
lib/: dune
test/: dune
