cabal-version:      3.0
name:               reverse-polish-calculator
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Paul Zupan
maintainer:         paul.zupan.13@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable reverse-polish-calculator
    import:           warnings
    main-is:          Main.hs
    other-modules:    Eval, Lexer
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
